--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -90,7 +90,7 @@
    "id": "d98475fa",
    "metadata": {},
    "source": [
-    "Question 6.3) Overall, I would like to say that the usefulness of a chatbot in learning code on 10 point scale would be a 9. I always saw chatbots to be a \"do it for you\" ordeal but the way it explains and realizing you can actually ask it anything was amazing to see. The greatest advantage however, is that ChatGPT doesn't sleep and that you can ask it anything whenever. Some more specifics would be how you can ask it for comments on each line of code to see what it does and how it simulates the stastical problem, or even go to more depth and ask why it chose such methodology to improve your overall thought process when it comes to solving a similar problem. I would say personally, little helpful details like that contribute to the overall learning process immensely."
+    "Question 6.3) Overall, I would like to say that the usefulness of a chatbot in learning code on 10 point scale would be a 9. I always saw chatbots to be a \"do it for you\" ordeal but the way it explains and realizing you can actually ask it anything was amazing to see. The greatest advantage however, is that ChatGPT doesn't sleep and that you can ask it anything whenever. Some more specifics would be how you can ask it for comments on each line of code to see what it does and how it simulates the statistical problem, or even go to more depth and ask why it chose such methodology to improve your overall thought process when it comes to solving a similar problem. I would say personally, little helpful details like that contribute to the overall learning process immensely."
    ]
   },
   {
